fixed spacing on player list in game

--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -98,7 +98,9 @@
   .nameListBlack {
     color: black;
     width: fit-content;
+    margin-bottom: 15px;
   }
+
 @media (max-width: 820px) {
 
     .gameroom {
